Fix: Switch npm ci to npm install in Dockerfile

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -3,7 +3,8 @@
 FROM node:18-alpine AS build
 WORKDIR /app
 COPY package.json package-lock.json ./
-RUN npm ci
+# Usando npm install em vez de ci para ser mais flexível
+RUN npm install
 COPY . .
 RUN npm run build
 
